# TrickyStoreOSSPlusPlus

./: .clang-format  .gitignore  .gitmodules  NOTICE  README.md  build.gradle.kts  changelog.md  settings.gradle.kts  update.json
.github/workflows/: build.yml  changelog-generator.yml  changelogs.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/github/beakthoven/TrickyStoreOSS/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  binder_interceptor.cpp  native-lib.cpp
app/src/main/cpp/inject/: main.cpp  utils.cpp  utils.hpp
app/src/main/cpp/logging/: logging.cpp
app/src/main/cpp/logging/include/: logging.hpp
app/src/main/cpp/stub/: stub_binder.cpp  stub_utils.cpp
app/src/main/java/io/github/beakthoven/TrickyStoreOSS/: AndroidUtils.kt  AttestUtils.kt  CertificateGen.kt  CertificateHack.kt  CertificateHacker.kt  CertificateUtils.kt  Main.kt  MainActivity.kt  XmlParser.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/beakthoven/TrickyStoreOSS/: ExampleUnitTest.kt
docs/: 5ec1cff-violations.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle.kts  customize.sh  daemon  module.prop  service.sh  target.txt
module/template/: module.prop  service.sh
service/: build.gradle.kts  proguard-rules.pro
service/src/main/java/io/github/a13e300/tricky_store/: Config.kt  Main.kt  SecurityLevelInterceptor.kt  util.kt
stub/: build.gradle.kts
stub/src/main/java/android/app/: ActivityThread.java
stub/src/main/java/android/content/pm/: BaseParceledListSlice.java  IPackageManager.java  ParceledListSlice.java
stub/src/main/java/android/hardware/security/keymint/: Tag.java  (+6 more)
stub/src/main/java/android/os/: ServiceManager.java  SystemProperties.java
stub/src/main/java/android/security/: AndroidKeyStoreMaintenance.java  Credentials.java  KeyStore.java
stub/src/main/java/android/security/keymaster/: ExportResult.java  KeyCharacteristics.java  KeymasterArgument.java  KeymasterArguments.java  KeymasterCertificateChain.java  KeymasterDefs.java
stub/src/main/java/android/security/keystore/: AndroidKeyStoreProvider.java  IKeystoreCertificateChainCallback.java  IKeystoreExportKeyCallback.java  IKeystoreKeyCharacteristicsCallback.java  IKeystoreService.java  KeystoreResponse.java
stub/src/main/java/android/security/keystore2/: AndroidKeyStoreProvider.java  Authorization.java  KeyDescriptor.java  KeyEntryResponse.java  KeyMetadata.java
stub/src/main/java/android/system/keystore2/: AndroidKeyStoreProvider.java  IKeystoreSecurityLevel.java  IKeystoreService.java
(+10 files in other folders)
